@@ -84,10 +84,12 @@ public:
 
     // Methods
     void               clear(void);
-    int                size(void) const;
+    long int           size(void) const;
     std::string        classname(void) const;
     bool               is_open(void) const;
-    void               open(const GFilename& filename, const bool& clobber = false);
+    bool               is_empty(void) const;
+    void               open(const GFilename& filename,
+                            const bool&      clobber = false);
     void               close(void);
     void               flush(const bool& force = false);
     void               date(const bool& flag);
@@ -156,6 +158,18 @@ inline
 bool GLog::is_open(void) const
 {
     return (m_file != NULL);
+}
+
+
+/***********************************************************************//**
+ * @brief Signal if log file is empty
+ *
+ * @return True if log file is empty, false otherwise.
+ ***************************************************************************/
+inline
+bool GLog::is_empty(void) const
+{
+    return (size() == 0);
 }
 
 
