@@ -45,10 +45,12 @@ public:
 
     // Methods
     void               clear(void);
-    int                size(void) const;
+    long int           size(void) const;
     std::string        classname(void) const;
     bool               is_open(void) const;
-    void               open(const GFilename& filename, const bool& clobber = false);
+    bool               is_empty(void) const;
+    void               open(const GFilename& filename,
+                            const bool&      clobber = false);
     void               close(void);
     void               flush(const bool& force = false);
     void               date(const bool& flag);
