@@ -460,12 +460,21 @@ void GLog::clear(void)
 
 
 /***********************************************************************//**
- * @brief Return the number of characters that are actually in the buffer
+ * @brief Return the number of characters in the log file
+ *
+ * @return Number of characters in log file.
  ***************************************************************************/
-int GLog::size(void) const
+long int GLog::size(void) const
 {
-    // Return
-    return m_buffer.size();
+std::cout << "GLog::size m_buffer.size()=" << m_buffer.size() << std::endl;
+    // Determine the number of characters written to disk
+    long int size = (m_file != NULL) ? std::ftell(m_file) : 0;
+
+    // Add in buffer size
+    size += m_buffer.size();
+
+    // Return total size
+    return size;
 }
 
 
@@ -556,7 +565,9 @@ void GLog::init_members(void)
  * @param[in] log Logger.
  *
  * Copy all class members from @p log to the current logger instance. This
- * method will flush the buffer of @p log before copying.
+ * method will flush the buffer of @p log before copying. It will duplicate
+ * the file pointer on the log file so that the copy can safely work on the
+ * file without having to worry that the file pointer goes out of scope.
  ***************************************************************************/
 void GLog::copy_members(const GLog& log)
 {
@@ -566,7 +577,7 @@ void GLog::copy_members(const GLog& log)
     // doing this.
     const_cast<GLog*>(&log)->flush(true);
 
-    // Copy attributes
+    // Copy buffer attributes
     m_max_length = log.m_max_length;
     m_indent     = log.m_indent;
     m_stdout     = log.m_stdout;
@@ -615,16 +626,17 @@ void GLog::free_members(void)
  *
  * @param[in] force If true, force flushing.
  *
- * Flush string buffer if it is full or if flushing is enforced. This method
- * writes the output string in the relevant streams. It decomposes the
- * buffer in lines that a separated by a '\n' character. The following
- * streams are currently implemented (and will be filled in parallel):
- * stdout, stderr, and an ASCII file.
+ * Flush string buffer if it is full or if flushing is enforced.
+ *
+ * This method writes the output string in the relevant streams. It
+ * decomposes the buffer in lines that a separated by a '\n' character.
+ * The following streams are currently implemented (and will be filled in
+ * parallel): stdout, stderr, and - if available - an ASCII file.
  ***************************************************************************/
 void GLog::flush(const bool& force)
 {
     // Check if buffer should be flushed
-    bool flush = (force || size() > m_max_length);
+    bool flush = (force || m_buffer.size() > m_max_length);
 
     // Flush buffer
     if (flush) {
@@ -801,7 +813,7 @@ void GLog::append(std::string arg)
     // character is a \n then prepend a prefix at the beginning of the string
     // to be inserted.
     if ((m_buffer.size() == 0 && m_linestart) ||
-        (m_buffer.size() > 0 && m_buffer[m_buffer.size()-1] == '\n')) {
+        (m_buffer.size() >  0 && m_buffer[m_buffer.size()-1] == '\n')) {
 
         // Prepend prefix
         arg.insert(0, prefix());
